--- a/.github/workflows/main_flymebotapp.yml
+++ b/.github/workflows/main_flymebotapp.yml
@@ -4,6 +4,7 @@
 
 name: Build and deploy Python app to Azure Web App - FlyMeBotApp
 
+  
 on:
   push:
     branches:
@@ -22,13 +23,17 @@ jobs:
         with:
           python-version: '3.9'
 
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
@@ -40,6 +45,10 @@ jobs:
             . 
             !venv/
 
+      - name: Test with pytest
+        run: |
+          pytest ./tests.py
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
