--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 botbuilder-integration-aiohttp>=4.14.0
 datatypes-date-time>=1.0.0.a2
-asyncio>=3.4.3
+#asyncio>=3.4.3
 requests==2.23.0
 botbuilder-core>=4.14.1
 botframework-connector>=4.14.0
